--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="bor my-3"></div>
         <div>
             <div class="mb-3">
-                <label for="name" class="form-label">Name / Comapany /name <sup class="text-danger fw-bold">*</sup></label>
+                <label for="name" class="form-label">Name / Comapany-name <sup class="text-danger fw-bold">*</sup></label>
                 <input type="text" class="form-control" id="name" placeholder="Company names..." required>
             </div>
             <div class="mb-3">
@@ -72,7 +72,7 @@
                 <input type="date" class="form-control" id="startingDate" required>
             </div>
             <div class="mb-3">
-                <label for="endingDate" class="form-label">Starting date<sup class="text-danger fw-bold">*</sup></label>
+                <label for="endingDate" class="form-label">Ending date<sup class="text-danger fw-bold">*</sup></label>
                 <input type="date" class="form-control" id="endingDate" required>
             </div>
             <div class="my-3">
