--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
             return false;
         }
         else{
+             alert('submited SucessFully redirect to same page')
             return true;
         }
     }
