--- a/index.html
+++ b/index.html
@@ -151,9 +151,11 @@
             return false;
         }
         else{
-            event.preventDefault();
+      
              alert('submited SucessFully redirect to same page')
-            return true;
+         return  setTimeout(()=>{
+    return true
+},2000)
         }
     }
 </script>
